# plaster

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  compile_commands.json~HEAD  debug.sh  vcpkg.json
.cache/clangd/index/: ___wctype.h.DE0580324DE1DDC0.idx  __assert.D41685E9F8A5C9AF.idx  __assertion_handler.5C443B33D3EB88AA.idx  __bit_reference.79D57C324B5A320F.idx  __config.9E0EB39DF669EEDE.idx  __config_site.5B1BD8AF042D5D69.idx  __hash_table.5BDD3332FABFA7BA.idx  __locale.6D517D43AAB3E94E.idx  __log_hardening_failure.62636C81C6369E03.idx  __mbstate_t.h.B66D60335E487C19.idx  __node_handle.36C6724C51A3DE4C.idx  __split_buffer.1611572353E214D0.idx  __std_mbstate_t.h.38D7EE375B42E2AD.idx  __stdarg___gnuc_va_list.h.D1FE661C891408A2.idx  __stdarg___va_copy.h.CF7D928BFAE90417.idx  __stdarg_header_macro.h.F93136F0BC1EE199.idx  __stdarg_va_arg.h.A82A67E5C28CFABD.idx  __stdarg_va_copy.h.E87DADB13D0141CC.idx  __stdarg_va_list.h.F22A67E9320856CD.idx  __stddef_header_macro.h.E3C069A559DB6306.idx  __stddef_max_align_t.h.5A7F4DDE9ACB38FE.idx  __stddef_null.h.F396CA987B2C2083.idx  __stddef_nullptr_t.h.CD3D396889923FD4.idx  __stddef_offsetof.h.7A1440C09A38A1C8.idx  __stddef_ptrdiff_t.h.4BF07F1587B1FEA2.idx  __stddef_size_t.h.DACD17CC0440A0F2.idx  __stddef_wchar_t.h.EED2461EBC7B1689.idx  __tree.5A8F69E483349BF0.idx  __undef_macros.F82866B9B2467D69.idx  __verbose_abort.3D910DBC4B903B7A.idx  __verbose_trap.8A63702EE9E1F017.idx  _fixes.hpp.0FA146B58724EDB9.idx  _null.h.E480DE1D004F6F88.idx  _ptrdiff_t.h.50D202E6760919EB.idx  _size_t.h.031EC5CC0CB54B8E.idx  _symbol_aliasing.h.6BD369F1E693DF8C.idx  _va_list.h.A65E3E9BF0586C3A.idx  _vectorize.hpp.74B3973D77AF52BB.idx  _wchar.h.5801A2AEFED04867.idx  _wchar.h.E3FE869FE2B98389.idx  (+805 more)
cmake/: Assets.cmake  fetch_glad.cmake  fetch_glfw.cmake
examples/: CMakeLists.txt  print_hello.cpp
examples/basic_example/: main.cpp
ext/: CMakeLists.txt
ext/glad/: CMakeLists.txt
ext/glad/glad/include/glad/: gl.h
ext/glad/glad/src/: gl.c
ext/glad/include/glad/: gl.h
ext/glad/src/: gl.c
include/modules/: input.ixx  lua.ixx  plaster.ixx  point.ixx  renderer.ixx  ui.ixx
include/modules/flat/: flat.ixx  point.ixx  size.ixx
include/modules/plaster/: context.ixx  input_manager.ixx  lua_api.ixx  renderer.ixx  ui_engine.ixx  ui_engine_context.ixx
include/plaster/: context.hpp  input_manager.hpp  lua_api.hpp  renderer.hpp  ui_engine.hpp
src/: CMakeLists.txt  library.h
src/core/: renderer.cpp  ui_engine.cpp
src/input/: input_manager.cpp
src/lua/: lua_bindings.cpp
src/mod/: core.ixx  event.ixx  renderer.ixx  window.ixx
